[package]
name = "weresocool_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = "0.16.1"
futures = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
nanorand = "0.7.0"
env_logger = "0.10.0"
pollster = "0.3.0"
async-executor = "1.5.1"
log = "0.4.19"
error-iter = "0.4.1"
pixels = "0.13.0"
winit_input_helper = "0.14.1"
randomize = "3.0.1"
byteorder = "1.4.3"
getrandom = "0.2.10"
line_drawing = "1.0.0"
