[package]
name = "weresocool_visualizer"
version = "1.0.47"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "graph_bench"
harness = false

[dependencies]
winit = "0.28.6"
wgpu = "0.16.1"
futures = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
weresocool_fft = { path = "../../weresocool_fft" } 
weresocool_portaudio = { path = "../../weresocool/portaudio" } 
nanorand = "0.7.0"
env_logger = "0.10.0"
pollster = "0.3.0"
async-executor = "1.5.1"
log = "0.4.19"
error-iter = "0.4.1"
pixels = "0.13.0"
winit_input_helper = "0.14.1"
randomize = "3.0.1"
byteorder = "1.4.3"
getrandom = "0.2.10"
line_drawing = "1.0.0"
rand = "0.8.5"
plotters = "0.3.5"
crossbeam-channel = "0.5.8"
rodio = "0.17.1"
hound = "3.5.0"
ringbuf = "0.3.3"
async-ringbuf = "0.1.3"

[dev-dependencies]
criterion = "0.5.1"
